Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2336

Assert triggered from kudu::server::DiagnosticsLog::RunThread()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.7.0
    • 1.7.0
    • tserver
    • None

    Description

      While running tests built in DEBUG configuration in dist_test, sometimes the following stack traces appear:

      kudu-tserver: /data/8/aserbin/Projects/kudu/thirdparty/installed/common/include/sparsehash/internal/densehashtable.h:969: std::pair<iterator, bool> google::dense_hashtable<void *, void *, std::hash<void *>, google::dense_hash_set<void *, std::hash<void *>, std::equal_to<void *>, google::libc_allocator_with_realloc<void *> >::Identity, google::dense_hash_set<void *, std::hash<void *>, std::equal_to<void *>, google::libc_allocator_with_realloc<void *> >::SetKey, std::equal_to<void *>, google::libc_allocator_with_realloc<void *> >::insert_noresize(K &&, Args &&...) [Value = void *, Key = void *, HashFcn = std::hash<void *>, ExtractKey = google::dense_hash_set<void *, std::hash<void *>, std::equal_to<void *>, google::libc_allocator_with_realloc<void *> >::Identity, SetKey = google::dense_hash_set<void *, std::hash<void *>, std::equal_to<void *>, google::libc_allocator_with_realloc<void *> >::SetKey, EqualKey = std::equal_to<void *>, Alloc = google::libc_allocator_with_realloc<void *>, K = void *const &, Args = <void *const &>]: Assertion `!equals(std::forward<K>(key), key_info.empty_key) && "Inserting the empty key"' failed.
      *** Aborted at 1520660884 (unix time) try "date -d @1520660884" if you are using GNU date ***
      PC: @     0x7f7ffff57c37 gsignal                                                
      *** SIGABRT (@0x3e800002191) received by PID 8593 (TID 0x7f7ff7c8d700) from PID 8593; stack trace: ***
          @     0x7f8007d07330 (unknown) at ??:0                                      
          @     0x7f7ffff57c37 gsignal at ??:0                                            @     0x7f7ffff5b028 abort at ??:0                                          
          @     0x7f7ffff50bf6 (unknown) at ??:0                                      
          @     0x7f7ffff50ca2 __assert_fail at ??:0                                  
          @     0x7f800b4a0724 _ZN6google15dense_hashtableIPvS1_St4hashIS1_ENS_14dense_hash_setIS1_S3_St8e
      qual_toIS1_ENS_27libc_allocator_with_reallocIS1_EEE8IdentityENS9_6SetKeyES6_S8_E15insert_noresizeIRK
      S1_JSF_EEESt4pairINS_24dense_hashtable_iteratorIS1_S1_S3_SA_SB_S6_S8_EEbEOT_DpOT0_ at ??:0
          @     0x7f800b4a026f google::dense_hashtable<>::insert<>() at ??:0          
          @     0x7f800b4a01cf google::dense_hash_set<>::insert() at ??:0             
          @     0x7f800b4a0184 InsertIfNotPresent<>() at ??:0                         
          @     0x7f800b49ff47 kudu::server::DiagnosticsLog::SymbolSet::Add() at ??:0 
          @     0x7f800b4999f0 kudu::server::DiagnosticsLog::LogStacks()::$_1::operator()() at ??:0
          @     0x7f800b4997ea std::_Function_handler<>::_M_invoke() at ??:0          
          @     0x7f8003c016e3 std::function<>::operator()() at ??:0                  
          @     0x7f8003bfe811 kudu::StackTraceSnapshot::VisitGroups() at ??:0        
          @     0x7f800b498e4d kudu::server::DiagnosticsLog::LogStacks() at ??:0      
          @     0x7f800b4981b3 kudu::server::DiagnosticsLog::RunThread() at ??:0      
          @     0x7f800b49d479 boost::_mfi::mf0<>::operator()() at ??:0               
          @     0x7f800b49d3e0 boost::_bi::list1<>::operator()<>() at ??:0            
          @     0x7f800b49d37a boost::_bi::bind_t<>::operator()() at ??:0             
          @     0x7f800b49d15d boost::detail::function::void_function_obj_invoker0<>::invoke() at ??:0
          @     0x7f8005a24078 boost::function0<>::operator()() at ??:0               
          @     0x7f8003d2008d kudu::Thread::SuperviseThread() at ??:0                
          @     0x7f8007cff184 start_thread at ??:0                                   
          @     0x7f800001effd clone at ??:0  
      

      An example of dist_test run: http://dist-test.cloudera.org/job?job_id=aserbin.1520659980.50847

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            aserbin Alexey Serbin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: